--- a/debian/control
+++ b/debian/control
@@ -7,12 +7,12 @@ Build-Depends: debhelper (>= 9),
  libgstreamer-plugins-base1.0-dev (>= 1.2.0),
  libfslvpuwrap-dev (>= 1.0.45),
  gpu-viv-bin-fb-dev,
- gpu-viv-bin-dfb-dev,
  gpu-viv-bin-wl-dev,
  gpu-viv-bin-x11-dev,
  libx11-dev,
  kernel-cubox-i-dev,
- libfslcodec-dev
+ libfslcodec-dev,
+ libg2d-dev,
 Standards-Version: 3.9.6
 Section: libs
 
@@ -27,16 +27,16 @@ Replaces: gstreamer1.0-imx
 Description: Todo
  T. O. D. O.
 
-Package: gstreamer1.0-imx-dfb
-Section: libs
-Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}, imx-gpu-viv-dfb
-Provides: gstreamer1.0-imx
-Breaks: gstreamer1.0-imx
-Replaces: gstreamer1.0-imx
-Description: Todo
- T. O. D. O.
+#Package: gstreamer1.0-imx-dfb
+#Section: libs
+#Architecture: any
+#Pre-Depends: ${misc:Pre-Depends}
+#Depends: ${shlibs:Depends}, ${misc:Depends}, imx-gpu-viv-dfb
+#Provides: gstreamer1.0-imx
+#Breaks: gstreamer1.0-imx
+#Replaces: gstreamer1.0-imx
+#Description: Todo
+# T. O. D. O.
 
 Package: gstreamer1.0-imx-wl
 Section: libs
