--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 DESTDIR=$(CURDIR)/debian/gstreamer1.0-imx
-KHDRDIR=$(shell echo /usr/include/kernel-*-cubox-i)
+KHDRDIR=/usr/include/imx-kernel-api
 SARGS=--prefix=/usr --libdir=/usr/lib/$(DEB_HOST_MULTIARCH) --kernel-headers=$(KHDRDIR)
 
 %:
