tell the linker about the new vivante library location /usr/lib/galcore

--- a/debian/rules
+++ b/debian/rules
@@ -25,16 +25,16 @@ override_dh_auto_clean:
 	rm -rf .lock*
 
 override_dh_auto_install:
-	./waf configure $(SARGS) --egl-platform=fb -o build-fb
+	LDFLAGS="-L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=fb -o build-fb
 	./waf build -o build-fb
 	./waf install -o build-fb --destdir=$(DESTDIR)-fb
-#	./waf configure $(SARGS) --egl-platform=directfb -o build-dfb
+#	LDFLAGS="-L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=directfb -o build-dfb
 #	./waf build -o build-dfb
 #	./waf install -o build-dfb --destdir=$(DESTDIR)-dfb
-	./waf configure $(SARGS) --egl-platform=wayland -o build-wl
+	LDFLAGS="-L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=wayland -o build-wl
 	./waf build -o build-wl
 	./waf install -o build-wl --destdir=$(DESTDIR)-wl
-	./waf configure $(SARGS) --egl-platform=x11 -o build-x11
+	LDFLAGS="-L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=x11 -o build-x11
 	./waf build -o build-x11
 	./waf install -o build-x11 --destdir=$(DESTDIR)-x11
 
