--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Priority: extra
 Maintainer: Josua Mayer <privacy@not.given>
 Build-Depends: debhelper (>= 9),
  pkg-config,
+ uauhelper,
  libgstreamer1.0-dev (>= 1.2.0),
  libgstreamer-plugins-base1.0-dev (>= 1.2.0),
  libfslvpuwrap-dev (>= 1.0.45),
