--- a/debian/rules
+++ b/debian/rules
@@ -51,4 +51,4 @@ override_dh_auto_install:
 	./waf install -o build-x11 --destdir=$(DESTDIR)-x11
 
 override_dh_shlibdeps:
-	dh_shlibdeps -- --ignore-missing-info
+	dh_shlibdeps -- --ignore-missing-info -ximx-gpu-viv-fb -ximx-gpu-viv-dfb -ximx-gpu-viv-x11 -ximx-gpu-viv-wl
