--- a/debian/control
+++ b/debian/control
@@ -17,14 +17,24 @@ Build-Depends: debhelper (>= 9),
 Standards-Version: 3.9.6
 Section: libs
 
+Package: gstreamer1.0-imx
+Section: libs
+Architecture: any
+Pre-Depends: ${misc:Pre-Depends}
+Depends:
+ ${shlibs:Depends},
+ ${misc:Depends},
+ gstreamer1.0-imx-fb | gstreamer1.0-imx-wl | gstreamer1.0-imx-x11,
+
 Package: gstreamer1.0-imx-fb
 Section: libs
 Architecture: any
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}, imx-gpu-viv-fb
-Provides: gstreamer1.0-imx
-Breaks: gstreamer1.0-imx
-Replaces: gstreamer1.0-imx
+Depends:
+ ${shlibs:Depends},
+ ${misc:Depends},
+ gstreamer1.0-imx,
+ imx-gpu-viv-fb,
 Description: Todo
  T. O. D. O.
 
@@ -32,10 +42,11 @@ Package: gstreamer1.0-imx-wl
 Section: libs
 Architecture: any
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}, imx-gpu-viv-wl
-Provides: gstreamer1.0-imx
-Breaks: gstreamer1.0-imx
-Replaces: gstreamer1.0-imx
+Depends:
+ ${shlibs:Depends},
+ ${misc:Depends},
+ gstreamer1.0-imx,
+ imx-gpu-viv-wl,
 Description: Todo
  T. O. D. O.
 
@@ -43,9 +54,10 @@ Package: gstreamer1.0-imx-x11
 Section: libs
 Architecture: any
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}, imx-gpu-viv-x11
-Provides: gstreamer1.0-imx
-Breaks: gstreamer1.0-imx
-Replaces: gstreamer1.0-imx
+Depends:
+ ${shlibs:Depends},
+ ${misc:Depends},
+ gstreamer1.0-imx,
+ imx-gpu-viv-x11,
 Description: Todo
  T. O. D. O.
