--- a/debian/rules
+++ b/debian/rules
@@ -26,21 +26,18 @@ override_dh_auto_clean:
 
 override_dh_auto_install:
 
-	# select Vivante FB
-	uauhelper --set vivante-gal /usr/lib/galcore/libGAL-fb.so
-	LDFLAGS="-L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=fb -o build-fb
+	# Framebuffer
+	LDFLAGS="-L/usr/lib/galcore/fb -L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=fb -o build-fb
 	./waf build -o build-fb
 	./waf install -o build-fb --destdir=$(DESTDIR)-fb
 
-	# select Vivante WL
-	uauhelper --set vivante-gal /usr/lib/galcore/libGAL-wl.so
-	LDFLAGS="-L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=wayland -o build-wl
+	# Wayland
+	LDFLAGS="-L/usr/lib/galcore/wl -L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=wayland -o build-wl
 	./waf build -o build-wl
 	./waf install -o build-wl --destdir=$(DESTDIR)-wl
 
-	# select Vivante X11
-	uauhelper --set vivante-gal /usr/lib/galcore/libGAL-x11.so
-	LDFLAGS="-L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=x11 -o build-x11
+	# X11
+	LDFLAGS="-L/usr/lib/galcore/x11 -L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=x11 -o build-x11
 	./waf build -o build-x11
 	./waf install -o build-x11 --destdir=$(DESTDIR)-x11
 
