--- a/debian/rules
+++ b/debian/rules
@@ -27,17 +27,17 @@ override_dh_auto_clean:
 override_dh_auto_install:
 
 	# Framebuffer
-	LDFLAGS="-L/usr/lib/galcore/fb -L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=fb -o build-fb
+	CFLAGS="-g" LDFLAGS="-L/usr/lib/galcore/fb -L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=fb -o build-fb
 	./waf build -o build-fb
 	./waf install -o build-fb --destdir=$(DESTDIR)-fb
 
 	# Wayland
-	LDFLAGS="-L/usr/lib/galcore/wl -L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=wayland -o build-wl
+	CFLAGS="-g" LDFLAGS="-L/usr/lib/galcore/wl -L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=wayland -o build-wl
 	./waf build -o build-wl
 	./waf install -o build-wl --destdir=$(DESTDIR)-wl
 
 	# X11
-	LDFLAGS="-L/usr/lib/galcore/x11 -L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=x11 -o build-x11
+	CFLAGS="-g" LDFLAGS="-L/usr/lib/galcore/x11 -L/usr/lib/galcore" ./waf configure $(SARGS) --egl-platform=x11 -o build-x11
 	./waf build -o build-x11
 	./waf install -o build-x11 --destdir=$(DESTDIR)-x11
 
