lintian: extended-description-line-too-long

--- a/debian/control
+++ b/debian/control
@@ -26,7 +26,8 @@ Depends:
  ${misc:Depends},
  gstreamer1.0-imx-fb (= ${binary:Version}) | gstreamer1.0-imx-wl (= ${binary:Version}) | gstreamer1.0-imx-x11 (= ${binary:Version}),
 Description: GStreamer plugins for Freescale i.MX series of SoCs
- Provides gstreamer plugins which can utilize the hardware accelerators for audio and video that are present in Freescale`s i.MX series of SoCs.
+ Provides gstreamer plugins which can utilize the hardware accelerators for audio
+ and video that are present in Freescale`s i.MX series of SoCs.
 
 Package: gstreamer1.0-imx-fb
 Section: libs
@@ -38,7 +39,8 @@ Depends:
  gstreamer1.0-imx (= ${binary:Version}),
  imx-gpu-viv-fb,
 Description: GStreamer plugins for Freescale i.MX series of SoCs (for Framebuffer)
- Provides gstreamer plugins which can utilize the hardware accelerators for audio and video that are present in Freescale`s i.MX series of SoCs.
+ Provides gstreamer plugins which can utilize the hardware accelerators for audio
+ and video that are present in Freescale`s i.MX series of SoCs.
 
 Package: gstreamer1.0-imx-wl
 Section: libs
@@ -50,7 +52,8 @@ Depends:
  gstreamer1.0-imx (= ${binary:Version}),
  imx-gpu-viv-wl,
 Description: GStreamer plugins for Freescale i.MX series of SoCs (for Wayland)
- Provides gstreamer plugins which can utilize the hardware accelerators for audio and video that are present in Freescale`s i.MX series of SoCs.
+ Provides gstreamer plugins which can utilize the hardware accelerators for audio
+ and video that are present in Freescale`s i.MX series of SoCs.
 
 Package: gstreamer1.0-imx-x11
 Section: libs
@@ -62,7 +65,8 @@ Depends:
  gstreamer1.0-imx (= ${binary:Version}),
  imx-gpu-viv-x11,
 Description: GStreamer plugins for Freescale i.MX series of SoCs (for X11)
- Provides gstreamer plugins which can utilize the hardware accelerators for audio and video that are present in Freescale`s i.MX series of SoCs.
+ Provides gstreamer plugins which can utilize the hardware accelerators for audio
+ and video that are present in Freescale`s i.MX series of SoCs.
 
 Package: gstreamer1.0-imx-fb-dbg
 Architecture: any
@@ -71,7 +75,8 @@ Depends:
  ${misc:Depends},
  gstreamer1.0-imx-fb (= ${binary:Version}),
 Description: Debug Symbols for gstreamer1.0-imx (for Framebuffer)
- Provides the debug symbols to the GStreamer plugins for Freescale i.MX series of SoCs.
+ Provides the debug symbols to the GStreamer plugins for Freescale i.MX series of
+ SoCs.
 
 Package: gstreamer1.0-imx-wl-dbg
 Architecture: any
@@ -80,7 +85,8 @@ Depends:
  ${misc:Depends},
  gstreamer1.0-imx-wl (= ${binary:Version}),
 Description: Debug Symbols for gstreamer1.0-imx (for Wayland)
- Provides the debug symbols to the GStreamer plugins for Freescale i.MX series of SoCs.
+ Provides the debug symbols to the GStreamer plugins for Freescale i.MX series of
+ SoCs.
 
 Package: gstreamer1.0-imx-x11-dbg
 Architecture: any
@@ -89,4 +95,5 @@ Depends:
  ${misc:Depends},
  gstreamer1.0-imx-x11 (= ${binary:Version}),
 Description: Debug Symbols for gstreamer1.0-imx (for X11)
- Provides the debug symbols to the GStreamer plugins for Freescale i.MX series of SoCs.
+ Provides the debug symbols to the GStreamer plugins for Freescale i.MX series of
+ SoCs.
