--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends: debhelper (>= 9),
  imx-kernel-api,
  libfslcodec-dev,
  libg2d-dev,
- libimxvpuapi-dev
+ libimxvpuapi-dev (>= 0.10.3)
 Standards-Version: 3.9.6
 Section: libs
 
