--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: gstreamer1.0-imx
 Priority: extra
 Maintainer: Josua Mayer <privacy@not.given>
 Build-Depends: debhelper (>= 9),
+ python (<< 3),
  pkg-config,
  libgstreamer1.0-dev (>= 1.2.0),
  libgstreamer-plugins-base1.0-dev (>= 1.2.0),
