--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Build-Depends: debhelper (>= 9),
  pkg-config,
  libgstreamer1.0-dev (>= 1.2.0),
  libgstreamer-plugins-base1.0-dev (>= 1.2.0),
+ libgstreamer-plugins-bad1.0-dev,
  imx-gpu-viv-fb-dev,
  imx-gpu-viv-wl-dev,
  imx-gpu-viv-x11-dev,
