--- a/debian/control
+++ b/debian/control
@@ -35,6 +35,16 @@ Description: GStreamer plugins for Freescale i.MX series of SoCs
  Provides gstreamer plugins which can utilize the hardware accelerators for audio
  and video that are present in Freescale`s i.MX series of SoCs.
 
+Package: gstreamer1.0-imx-dev
+Section: libdevel
+Architecture: any
+Depends:
+ ${misc:Depends},
+ gstreamer1.0-imx (= ${binary:Version}),
+Description: Development files for gstreamer-imx
+ Provides libraries and headers to create applications using the gstreamer
+ plugins for i.MX* SoCs.
+
 Package: gstreamer1.0-imx-fb
 Section: libs
 Architecture: any
